[workspace]
resolver = "2"
members = [
  "bin/ev-reth",
  "crates/common",
  "crates/node",
  "crates/evolve",
  "crates/tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/evstack/ev-reth"
repository = "https://github.com/evstack/ev-reth"
authors = ["Evolve Stack Contributors"]

[workspace.dependencies]
# Reth dependencies - Using the latest stable versions
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }


# Consensus dependencies
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }

# Test dependencies
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", default-features = false }

# Alloy dependencies
alloy = { version = "1.0.23", features = [
  "contract",
  "providers",
  "provider-http",
  "signers",
  "reqwest-rustls-tls",
], default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-network = { version = "1.0.23", default-features = false }
alloy-provider = { version = "1.0.23", default-features = false }
alloy-rpc-client = { version = "1.0.23", default-features = false }
alloy-rpc-types = { version = "1.0.23", default-features = false }
alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-rpc-types-engine = { version = "1.0.23", default-features = false }
alloy-signer-local = { version = "1.0.23", features = ["mnemonic"] }
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-rpc-types-txpool = { version = "1.0.23", default-features = false }

# Core dependencies
eyre = "0.6"
tracing = "0.1"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }


jsonrpsee = "0.25.1"
jsonrpsee-core = "0.25.1"
jsonrpsee-server = "0.25.1"
jsonrpsee-http-client = "0.25.1"
jsonrpsee-types = "0.25.1"
jsonrpsee-proc-macros = "0.25.1"
# Additional dependencies
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tempfile = "3.10"
hex = "0.4"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
codegen-units = 1

# Memory-optimized release profile
[profile.docker]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 1
incremental = false

# Maximum performance profile
[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
debug = false
