[package]
name = "lumen-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "End-to-end tests for Lumen"

[dependencies]
# Lumen crates
lumen-node = { path = "../node" }
lumen-rollkit = { path = "../rollkit" }
lumen-common = { path = "../common" }

# Reth dependencies
reth-testing-utils.workspace = true
reth-db.workspace = true
reth-evm-ethereum.workspace = true
reth-transaction-pool.workspace = true
reth-consensus.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-node-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-node-api.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-engine-local.workspace = true
reth-revm.workspace = true
reth-chainspec.workspace = true
reth_ethereum_primitives.workspace = true

# Alloy dependencies
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

# Test dependencies
tempfile.workspace = true
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { workspace = true, features = ["full"] }
eyre.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
