[package]
description = "Lumen node implementation"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lumen-node"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Lumen dependencies
lumen-common = {path = "../common"}
lumen-rollkit = {path = "../rollkit"}

# Reth dependencies
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-engine-local.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-ethereum.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-primitives.workspace = true
reth-provider = {workspace = true, features = ["test-utils"]}
reth-revm.workspace = true
reth-trie-db.workspace = true

# Additional reth dependencies for payload builder
reth-engine-primitives.workspace = true
reth-errors.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-network.workspace = true
reth-node-core.workspace = true
reth-node-types.workspace = true
reth-payload-builder-primitives.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-engine-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true

# Core dependencies
async-trait.workspace = true
delegate = "0.13.3"
eyre.workspace = true
futures.workspace = true
jsonrpsee = {version = "0.25", features = ["server", "macros"]}
parking_lot = "0.12"
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["full"]}
tower = {version = "0.4", features = ["util"]}
tracing.workspace = true

# --- added for TxForwarder ---
bytes = "1.6"
governor = "0.6"
hex = "0.4"
metrics = "0.22"
once_cell = "1.19"
prometheus = "0.13"
reqwest = {version = "0.11", features = ["json"]}
reth-metrics = {workspace = true}
# --------------------------------

[dev-dependencies]
# Test dependencies
alloy-genesis.workspace = true
hex = "0.4"
reth-consensus.workspace = true
reth-db.workspace = true
reth-evm-ethereum.workspace = true
reth-tasks.workspace = true
reth-testing-utils.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
tempfile.workspace = true
tokio = {workspace = true, features = ["full"]}
wiremock = "0.5"

[lints]
workspace = true
