[package]
name = "lumen-rollkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rollkit-specific types and integration for Lumen"

[dependencies]
# Reth dependencies
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-engine-primitives.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-rpc-types-engine.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true

# Core dependencies
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# RPC dependencies
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
futures.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true