[package]
description = "Rollkit-specific types and integration for Lumen"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lumen-rollkit"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Reth dependencies
reth-engine-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-primitives.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-convert.workspace = true
reth-rpc-eth-api.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-txpool.workspace = true

# Core dependencies
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true

# RPC dependencies
async-trait.workspace = true
futures.workspace = true
jsonrpsee = {version = "0.24.9", features = ["server", "macros"]}
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
