[package]
description = "Rollkit-specific types and integration for Lumen"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lumen-rollkit"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Reth dependencies
reth-engine-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-primitives.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true

# Core dependencies
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
